--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 										
 										Overall, I'm looking for a position that will allow me to thrive both personally and professionally, and where I can make a meaningful contribution to your organization's mission.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Resume</a></li>
+										<li><a href="https://docs.google.com/document/d/e/2PACX-1vQLIOJqYsn7EzkL2BFK_t2gx2hwFSIv_BzXDI9vgnDMtTs6P0gOwTfkmh3tabzhhOM7CpkQ29I36Etd/pub" class="button">Resume</a></li>
 									</ul>
 								</div>
 							</div>
