--- a/index.html
+++ b/index.html
@@ -50,11 +50,19 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Yasine Omar Benzekri</h2>
-									<p>I'm seeking a dynamic and challenging work environment that provides ample opportunities for growth and learning. I'm particularly interested in working alongside individuals who can serve as valuable mentors, and with whom I can collaborate to develop innovative solutions.
+									<p>Aspiring coder seeking a dynamic and challenging work environment that fosters growth and learning. I am motivated by the opportunity to collaborate with talented individuals who can serve as valuable mentors, while together we develop innovative solutions.
 
-										Ideally, I'd like to work for an organization that is dedicated to supporting underserved populations, as this aligns with my values and desire to make a positive impact in the world. As a coder, I'm excited to take on new challenges and expand my skillset, while also contributing to meaningful work that has the potential to make a real difference in people's lives.
-										
-										Overall, I'm looking for a position that will allow me to thrive both personally and professionally, and where I can make a meaningful contribution to your organization's mission.</p>
+									My coding journey began with a deep curiosity and passion for problem-solving. Over the past year, I have gained hands-on experience in JavaScript, React, Redux, Python, and Express through personal projects and collaborative group efforts. These experiences have allowed me to develop a solid foundation in these technologies and strengthen my ability to deliver high-quality software solutions.
+
+									What sets me apart is my unwavering dedication to continuous learning and improvement. I actively seek out opportunities to expand my skillset, staying up to date with the latest industry trends and technologies. I am not just looking for a job; I am eager to immerse myself in a supportive environment that encourages professional growth and provides opportunities to further develop my coding abilities.
+
+									While my professional experience is still in its early stages, I have had the privilege of collaborating with diverse teams on various projects. These experiences have honed my ability to work effectively in a group setting, communicate ideas clearly, and contribute to creating meaningful work.
+
+									I am particularly drawn to organizations that are committed to making a positive impact and supporting underserved populations. Aligning my values with such a mission is important to me, as I am driven by the desire to contribute to work that improves people's lives.
+
+									Please take a moment to explore my featured projects, where I showcase my problem-solving skills and demonstrate my ability to work with different technologies. These projects reflect my eagerness to tackle challenges and create solutions that make a difference.
+
+									I am excited to join a team where I can thrive both personally and professionally. If you are looking for a passionate and dedicated coder who brings a strong foundation in JavaScript, React, Redux, Python, and Express, I would love to connect and explore how we can collaborate to achieve great things together.</p>
 									<ul class="actions">
 										<li><a href="https://docs.google.com/document/d/e/2PACX-1vQLIOJqYsn7EzkL2BFK_t2gx2hwFSIv_BzXDI9vgnDMtTs6P0gOwTfkmh3tabzhhOM7CpkQ29I36Etd/pub" class="button">Resume</a></li>
 									</ul>
@@ -113,18 +121,6 @@
 							</div>
 						</div>
 					</section>
-					<section>
-						<a href="#" class="image"><img src="/images/HH-Gif.gif" alt="" data-position="25% 25%" /></a>
-						<div class="content">
-							<div class="inner">
-								<h2>HomelyHostel</h2>
-								<p>HomelyHostel is a full-stack web application that was built using a PERN tech stack (PostgreSQL, Express.js, React, and Node.js). Its primary features include the ability for users to list and book housing accommodations, as well as to provide ratings and reviews.</p>
-								<ul class="actions">
-									<li><a href="https://homelyhostel.onrender.com/" target="_blank" class="button">Visit Website</a></li>
-								</ul>
-							</div>
-						</div>
-					</section>
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>Skills</h2>
@@ -161,9 +157,6 @@
 									<!-- <p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p> -->
 								</section>
 							</div>
-							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn more</a></li>
-							</ul>
 						</div>
 					</section>
 				</section>
