--- a/index.html
+++ b/index.html
@@ -50,19 +50,16 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Yasine Omar Benzekri</h2>
-									<p>Aspiring coder seeking a dynamic and challenging work environment that fosters growth and learning. I am motivated by the opportunity to collaborate with talented individuals who can serve as valuable mentors, while together we develop innovative solutions.
+									<p>
+As an aspiring coder, I seek a dynamic and challenging work environment that promotes growth and learning. I have a deep curiosity and passion for problem-solving, which has driven my coding journey. Over the past year, I have gained hands-on experience in JavaScript, React, Redux, Python, and Express through personal and collaborative projects, building a solid foundation in these technologies.
 
-									My coding journey began with a deep curiosity and passion for problem-solving. Over the past year, I have gained hands-on experience in JavaScript, React, Redux, Python, and Express through personal projects and collaborative group efforts. These experiences have allowed me to develop a solid foundation in these technologies and strengthen my ability to deliver high-quality software solutions.
+What sets me apart is my unwavering dedication to continuous learning. I actively stay updated with industry trends and technologies, constantly expanding my skillset. I am eager to immerse myself in a supportive environment that encourages professional growth and fosters the development of my coding abilities.
 
-									What sets me apart is my unwavering dedication to continuous learning and improvement. I actively seek out opportunities to expand my skillset, staying up to date with the latest industry trends and technologies. I am not just looking for a job; I am eager to immerse myself in a supportive environment that encourages professional growth and provides opportunities to further develop my coding abilities.
+While my professional experience is still in its early stages, I have collaborated effectively with diverse teams, communicating ideas clearly and contributing to meaningful work. I am particularly drawn to organizations committed to making a positive impact and supporting underserved populations, as I am driven by the desire to improve people's lives through my work.
 
-									While my professional experience is still in its early stages, I have had the privilege of collaborating with diverse teams on various projects. These experiences have honed my ability to work effectively in a group setting, communicate ideas clearly, and contribute to creating meaningful work.
+Please take a moment to explore my featured projects, where I showcase my problem-solving skills and ability to work with different technologies. These projects reflect my eagerness to tackle challenges and create meaningful solutions.
 
-									I am particularly drawn to organizations that are committed to making a positive impact and supporting underserved populations. Aligning my values with such a mission is important to me, as I am driven by the desire to contribute to work that improves people's lives.
-
-									Please take a moment to explore my featured projects, where I showcase my problem-solving skills and demonstrate my ability to work with different technologies. These projects reflect my eagerness to tackle challenges and create solutions that make a difference.
-
-									I am excited to join a team where I can thrive both personally and professionally. If you are looking for a passionate and dedicated coder who brings a strong foundation in JavaScript, React, Redux, Python, and Express, I would love to connect and explore how we can collaborate to achieve great things together.</p>
+I am excited to join a team where I can thrive both personally and professionally. If you are seeking a passionate and dedicated coder with a strong foundation in JavaScript, React, Redux, Python, and Express, I would love to connect and explore how we can collaborate to achieve great things together.</p>
 									<ul class="actions">
 										<li><a href="https://docs.google.com/document/d/e/2PACX-1vQLIOJqYsn7EzkL2BFK_t2gx2hwFSIv_BzXDI9vgnDMtTs6P0gOwTfkmh3tabzhhOM7CpkQ29I36Etd/pub" class="button">Resume</a></li>
 									</ul>
