--- a/index.html
+++ b/index.html
@@ -50,16 +50,11 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Yasine Omar Benzekri</h2>
-									<p>
-As an aspiring coder, I seek a dynamic and challenging work environment that promotes growth and learning. I have a deep curiosity and passion for problem-solving, which has driven my coding journey. Over the past year, I have gained hands-on experience in JavaScript, React, Redux, Python, and Express through personal and collaborative projects, building a solid foundation in these technologies.
+									<p>I am an aspiring coder seeking a dynamic work environment that fosters my growth and learning. With a deep passion for problem-solving, I have gained hands-on experience in JavaScript, React, Redux, Python, and Express. My commitment to continuous learning keeps me updated with industry trends and technologies.
 
-What sets me apart is my unwavering dedication to continuous learning. I actively stay updated with industry trends and technologies, constantly expanding my skillset. I am eager to immerse myself in a supportive environment that encourages professional growth and fosters the development of my coding abilities.
+									Collaboration is key to my success. I have effectively worked with diverse teams, contributing ideas and delivering meaningful work. Making a positive impact and supporting underserved populations are values close to my heart.
 
-While my professional experience is still in its early stages, I have collaborated effectively with diverse teams, communicating ideas clearly and contributing to meaningful work. I am particularly drawn to organizations committed to making a positive impact and supporting underserved populations, as I am driven by the desire to improve people's lives through my work.
-
-Please take a moment to explore my featured projects, where I showcase my problem-solving skills and ability to work with different technologies. These projects reflect my eagerness to tackle challenges and create meaningful solutions.
-
-I am excited to join a team where I can thrive both personally and professionally. If you are seeking a passionate and dedicated coder with a strong foundation in JavaScript, React, Redux, Python, and Express, I would love to connect and explore how we can collaborate to achieve great things together.</p>
+									Explore my featured projects, showcasing my problem-solving skills and proficiency in various technologies. I am eager to join a team where I can thrive both personally and professionally. Let's connect and explore how we can achieve great things together.</p>
 									<ul class="actions">
 										<li><a href="https://docs.google.com/document/d/e/2PACX-1vQLIOJqYsn7EzkL2BFK_t2gx2hwFSIv_BzXDI9vgnDMtTs6P0gOwTfkmh3tabzhhOM7CpkQ29I36Etd/pub" class="button">Resume</a></li>
 									</ul>
