--- a/index.html
+++ b/index.html
@@ -50,11 +50,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Yasine Omar Benzekri</h2>
-									<p>I am an aspiring coder seeking a dynamic work environment that fosters my growth and learning. With a deep passion for problem-solving, I have gained hands-on experience in JavaScript, React, Redux, Python, and Express. My commitment to continuous learning keeps me updated with industry trends and technologies.
-
-									Collaboration is key to my success. I have effectively worked with diverse teams, contributing ideas and delivering meaningful work. Making a positive impact and supporting underserved populations are values close to my heart.
-
-									Explore my featured projects, showcasing my problem-solving skills and proficiency in various technologies. I am eager to join a team where I can thrive both personally and professionally. Let's connect and explore how we can achieve great things together.</p>
+									<p>Hiya! I'm Yasine, an enthusiastic coder on a journey of growth and learning. I thrive in collaborative environments where I can contribute my problem-solving skills. Passionate about making a positive impact and supporting underserved populations, I continuously seek opportunities to expand my knowledge and stay up to date with the latest trends. Let's connect and explore how we can achieve greatness together.</p>
 									<ul class="actions">
 										<li><a href="https://docs.google.com/document/d/e/2PACX-1vQLIOJqYsn7EzkL2BFK_t2gx2hwFSIv_BzXDI9vgnDMtTs6P0gOwTfkmh3tabzhhOM7CpkQ29I36Etd/pub" class="button">Resume</a></li>
 									</ul>
