--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 								<p>Youtobe is a Youtube clone project that aims to provide users with a platform to create, share, and discover content. The project is designed to allow users to create videos, and interact with said videos.</p>
 								<ul class="actions">
 									<li><a href="https://youtobe.onrender.com" target="_blank" class="button">Visit Website</a></li>
+									<li><a href="https://github.com/Yasine-ben/Youtobe" target="_blank" class="button">Project Repo</a></li>
 								</ul>
 							</div>
 						</div>
@@ -105,6 +106,7 @@
 								<p>Pear Music is a full stack application I developed along side a small team of developers, it is inspired by Apple Music. Pear Music is a music streaming application that allows users to upload & connect with their favorite artists & discover new music.</p>
 								<ul class="actions">
 									<li><a href="https://pearmusic.onrender.com/" target="_blank" class="button">Visit Website</a></li>
+									<li><a href="https://github.com/Sadiqaxxmed/PearMusic" target="_blank" class="button">Project Repo</a></li>
 								</ul>
 							</div>
 						</div>
@@ -227,3 +229,4 @@
 
 	</body>
 </html>
+
